@@ -1,3 +1,8 @@
+2004-04-06  Jody Goldberg <jody@gnome.org>
+
+	* gnome-keybinding-properties.c (cb_check_for_uniqueness) : Really fix
+	  this time to capture the vagaries of keys with and without names.
+
 2004-04-01  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.0.3
